test/oscar/compiler/errors/operandMismatch.oscar
def main() => unit = {
  println(1 + 1.0);
}